💄 add margin-top on scroll avoid being hidden by the header

--- a/frontend/packages/erd-core/src/features/erd/components/ERDContent/components/TableNode/TableDetail/Columns/Columns.module.css
+++ b/frontend/packages/erd-core/src/features/erd/components/ERDContent/components/TableNode/TableDetail/Columns/Columns.module.css
@@ -1,3 +1,4 @@
 .itemWrapper {
   border-bottom: 1px solid var(--global-border);
+  scroll-margin-top: 41px;
 }
